refactor: defensively copy mutable collections
Add compact constructors to ModelAlias, VirtualApiKey, BootstrapKey,
and OpenAiChatRequest so they store immutable snapshots of
caller-supplied collections, preventing post-binding mutation. Null
input degrades to empty collections.

Add contract tests covering the snapshot behavior and clean up test
exception declarations, proxy relay logging, and unused handler
arguments.